Front page structure

--- a/index.html
+++ b/index.html
@@ -66,6 +66,76 @@
                 <img src="assets/contentimg02.jpg" alt="">
             </div>
         </section>
+        <section class="page03">
+            <header>
+                <h2>Older Collections</h2>
+            </header>
+            <div class="p3content">
+                <div class="card">
+                    <div class="p3img">
+                        <img src="assets/contentimg03.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h2>Dragon's Denim</h2>
+                            <h3><em>Spring Summer 2023</em></h3>
+                        </div>
+                        <div class="card-button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="p3img">
+                        <img src="assets/contentimg04.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h2>Enchanted Elegance</h2>
+                            <h3><em>Fall Winter 2022</em></h3>
+                        </div>
+                        <div class="card-button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="p3img">
+                        <img src="assets/contentimg05.jpg" alt="">
+                    </div>
+                    <div class="card-content">
+                        <div>
+                            <h2>Elven Essence</h2>
+                            <h3><em>Spring Summer 2022</em></h3>
+                        </div>
+                        <div class="card-button">
+                            <a href="#">See more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page04">
+            <div class="p4img">
+                <img src="assets/contentimg06.jpg" alt="">
+            </div>
+            <div class="p4content">
+                <h2>Jewelry</h2>
+                <div class="text-box">
+                    <div class="text">
+                        <h3>Spellbinding Acessories</h3>
+                        <p>Discover the allure of our spellbinding accessories—a bewitching array crafted to adorn and enchant. From mystical amulets to ethereal scarves, each piece resonates with an otherworldly energy, inviting you to channel your inner mystic and infuse your style with enchantment.</p>
+                    </div>
+                    <div class="text">
+                        <h3>Custom Enchantments</h3>
+                        <p>Unveil the magic of bespoke fashion with our custom enchantments. Delve into a realm where your style becomes an incantation, tailored uniquely to your essence. From personalized spells to bespoke adornments, immerse yourself in a world where clothing transcends mere fabric, weaving your story into an enchanting tapestry of individuality.</p>
+                    </div>
+                </div>
+                <div class="button">
+                    <a href="">Explore</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         
