Changed the hero design

--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
     <main>
         <section class="hero">
             <header class="hero-content">
-                <div>
-                    <h1>Welcome to Magik</h1>
-                    <h2>Where Fashion Meets Enchantment</h2>
+                <div class="hero-text">
+                    <div>
+                        <h1>Welcome to Magik</h1>
+                        <h2>Where Fashion Meets Enchantment</h2>
+                    </div>
+                    <p>Transcending the ordinary and embraces the mystical. Step into our realm, where each garment tells a story of enchantment, blending contemporary allure with ancient mystique. Explore our collections crafted to evoke the magic within, inviting you to embrace your unique style and weave your own spellbinding tale. Let Magik be your guide in the journey to fashion enchantment.</p>
                 </div>
-                <p>Check out the Fall Winter 2023 collection</p>
+                <div class="hero-icons">
+                    <a href="#">Shop now</a>
+                </div>
             </header>
             <div class="hero-image">
                 <img src="assets/heroimg.png" alt="Young elf woman wearing fancy dress">
