--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <header>
         <nav class="menu">
-            <img src="assets/logo.png" alt="magik logo" width="240px">
+            <a href="#"><img src="assets/logo.png" alt="magik logo" width="240px"></a>
             <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Collections</a></li>
                 <li><a href="#">Jewelry</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
             <a href="https://github.com/jvsalv" target="_blank" class="github">Github</a>
         </nav>
