About page design

--- a/about.html
+++ b/about.html
@@ -21,13 +21,29 @@
         </nav>
     </header>
     <section class="about">
-        <div class="about">
+        <div class="container">
             <header>
                 <h1>About</h1>
             </header>
-            <div>
-                <p>At Magik, we believe in the transformative power of fashion. Our journey began with a vision to weave the threads of mystique into every garment, creating an enchanting tapestry of style and elegance. Inspired by ancient sorcery and infused with modern sophistication, our collections celebrate the fusion of the mystical and the contemporary.</p>
-                <p>Driven by a passion for craftsmanship and creativity, we meticulously craft each piece to evoke a sense of wonder and empowerment. Our commitment extends beyond fashion; we aspire to create a community where individuality flourishes and the allure of enchantment reigns supreme.</p>
+            <div class="content">
+                <div class="text">
+                    <p>At Magik, we believe in the transformative power of fashion. Our journey began with a vision to weave the threads of mystique into every garment, creating an enchanting tapestry of style and elegance. Inspired by ancient sorcery and infused with modern sophistication, our collections celebrate the fusion of the mystical and the contemporary.</p>
+                    <p>Driven by a passion for craftsmanship and creativity, we meticulously craft each piece to evoke a sense of wonder and empowerment. Our commitment extends beyond fashion; we aspire to create a community where individuality flourishes and the allure of enchantment reigns supreme.</p>
+                    <p>Celebrating the fusion of imagination and craftsmanship, Magik stands as a sanctuary for those seeking to embody the extraordinary. Our dedication to ethereal elegance and urban mystique propels us to curate collections that transcend trends, inviting you to embrace your individual magic. More than a fashion label, Magik is a canvas for self-expression, where every creation resonates with the essence of enchantment. Join us in this odyssey through the realms of style and mysticism, where each garment becomes a portal to your unique journey within the captivating world of Magik.</p>
+                    <p>Join us as we embark on this journey into the realms of fashion enchantment, where every stitch whispers a tale of magic and every garment invites you to embrace your unique mystique. Discover the essence of Magik—a brand that transcends trends and invites you to explore the enchantment within.</p>
+                </div>
+                <div class="content-footer">
+                    <div class="text">
+                        <p>Where Fashion Enchants. Discover timeless elegance and urban mystique in garments that weave stories of magic. Embrace your unique style and inner enchantment with us.</p>
+                        <p>Join our team</p>
+                    </div>
+                    <div class="address">
+                        <p>Magik Enchantments</p>
+                        <p>22 Mystical Lane</p>
+                        <p>Enchanted Woods</p>
+                        <p>Magikrealm</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
