--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>Magik</title>
@@ -143,7 +145,33 @@
         </section>
     </main>
     <footer>
-        
+        <section>
+            <div class="contact">
+                <h2>Contact us</h2>
+                <div class="text">
+                    <p>contact@magikenchanted.com</p>
+                    <p>+1 (555) 123-4567</p>
+                </div>
+            </div>
+            <header>
+                <img src="assets/logo-negative.png" alt="" width="240px">
+                <div class="socialmedia">
+                    <a href=""><img src="assets/iconinsta.png" alt=""></a>
+                    <a href=""><img src="assets/icontt.png" alt=""></a>
+                    <a href=""><img src="assets/iconyt.png" alt=""></a>
+                </div>
+            </header>
+            <div class="subscribe">
+                <h2>Subscribe</h2>
+                <div class="text">
+                    <p>Be the first to know about our next collections.</p>
+                    <form action="#" autocomplete="on">
+                        <input type="email" name="email" id="email" autocomplete="email" placeholder="example@magik.com">
+                        <input type="submit" class="material-icons" value="send">
+                    </form>
+                </div>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
