--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       rel="stylesheet">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/mediaquery.css">
     <title>Magik</title>
 </head>
 <body>
